Better control type of HTTP client. Temporarily disable HTTP2 test due to incompatibilities.
Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>